# general-agentic-memory

./: .gitignore  README.md  README_zh.md  pyproject.toml  requirements.txt
examples/: README.md  rest_api_client.py  run_api.py  run_web.py
examples/docs/: cli_usage.md  rest_api_usage.md  sdk_usage.md  web_usage.md
examples/long_horizon/: run.py  run.sh
examples/long_text/: add.py  request.py
examples/long_video/: add.py  request.py
research/: README.md  README_CN.md  pyproject.toml  setup.py
research/eval/: hotpotqa_test.py  locomo_test.py  narrativeqa_test.py  ruler_test.py
research/examples/quickstart/: README.md  basic_usage.py  model_usage.py  ttl_usage.py
research/gam_research/: __init__.py
research/gam_research/agents/: memory_agent.py  research_agent.py
research/gam_research/generator/: openai_generator.py  vllm_generator.py
research/gam_research/retriever/: base.py  bm25.py  dense_retriever.py  index_retriever.py
research/tests/: test_ttl_before_after.py  test_ttl_memory.py  test_ttl_page.py  test_ttl_standalone.py
src/gam/: __init__.py  cli.py
src/gam/agents/: __init__.py  chat_agent.py  gam_agent.py  text_chat_agent.py  text_gam_agent.py  video_chat_agent.py  video_gam_agent.py
src/gam/core/: __init__.py  node.py  tree.py
src/gam/generators/: __init__.py  base.py  config.py  openai_generator.py  sglang_generator.py
src/gam/prompts/: __init__.py  chat_prompts.py  chunker_prompts.py  gam_prompts.py  skill_prompts.py  video_gam_prompts.py
src/gam/readers/: __init__.py  base.py  pdf_reader.py  txt_reader.py
src/gam/web/: app.py  (+2 more)
(+46 files in other folders)
